Update Java 8 application and add to ci