@@ -1,26 +1,24 @@
 package com.unicorn.store.utils;
 import java.math.BigDecimal;
-import java.math.RoundingMode;
 
 public class Math {
-    Boolean bool = Boolean.valueOf(true);
-    Byte b = Byte.valueOf("1");
-    Character c = Character.valueOf('c');
-    Double d = Double.valueOf(1.0);
-    Float f = Float.valueOf(1.1f);
-    Long l = Long.valueOf(1);
-    Short sh = Short.valueOf("12");
-    short s3 = 3;
-    Short sh3 = Short.valueOf(s3);
-    Integer i = Integer.valueOf(1);
+    Boolean bool = new Boolean(true);
+    Byte b = new Byte("1");
+    Character c = new Character('c');
+    Double d = new Double(1.0);
+    Float f = new Float(1.1f);
+    Long l = new Long(1L);
+    Short sh = new Short("12");
+    Short s3 = 3;
+    Integer i = new Integer(1);
 
-    void divide() {
+    void divide(){
         BigDecimal bd = BigDecimal.valueOf(10);
-        BigDecimal bd2 = BigDecimal.valueOf(2);
-        bd.divide(bd2, RoundingMode.DOWN);
-        bd.divide(bd2, RoundingMode.DOWN);
-        bd.divide(bd2, 1, RoundingMode.CEILING);
-        bd.divide(bd2, 1, RoundingMode.DOWN);
-        bd.setScale(2, RoundingMode.DOWN);
+        BigDecimal bd2 = BigDecimal.valueOf(3);
+        bd.divide(bd2, BigDecimal.ROUND_DOWN);
+        bd.divide(bd2, 1);
+        bd.divide(bd2, 1, BigDecimal.ROUND_DOWN);
+        bd.divide(bd2, 1,1);
+        bd.setScale(2,1);
     }
 }
